--- a/Tema2-CaracteresLimitados/MainWindow.xaml
+++ b/Tema2-CaracteresLimitados/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Tema2_CaracteresLimitados"
         mc:Ignorable="d"
-        Title="MainWindow" Height="400" Width="638">
+        Title="Caracteres limitados" Height="400" Width="638">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="Red"/>
